// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ButtonGroup /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_button-group_db62b8 _button-group--horizontal_db62b8"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Button 1
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> > HorizontalProgressive story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_button-group_db62b8 _button-group--horizontal-progressive_db62b8 flex w-[400px]"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 flex-1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Confirm
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 flex-1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Cancel
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> > HorizontalProgressiveDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_button-group_db62b8 _button-group--horizontal-progressive_db62b8 flex w-[400px]"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 flex-1"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Confirm
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--disabled_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 flex-1"
      disabled=""
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Cancel
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> > HorizontalProgressiveTertiary story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_button-group_db62b8 _button-group--horizontal-progressive_db62b8"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Primary Button
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 -ml-spacing-size-2"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Tertiary Button
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> > Vertical story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_button-group_db62b8 _button-group--vertical_db62b8"
  >
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Button 1
      </span>
    </button>
    <button
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;
